aws_cf.yml
Description: "AWS CloudFormation stack v2.1 20 09 2023 - Author NYT"

Parameters:
  VpcCIDR:
    Description: CIDR block for the VPC
    Type: String
    Default: "172.31.0.0/16" 

Resources:
  MyVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: MyVPC

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: MyInternetGateway

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref MyVPC
      InternetGatewayId: !Ref InternetGateway

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: "172.31.1.0/24"
      AvailabilityZone: "ap-southeast-1a"
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: PublicSubnet1

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: "172.31.2.0/24"
      AvailabilityZone: "ap-southeast-1b"
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: PublicSubnet2

  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref MyVPC
      Tags:
        - Key: Name
          Value: PublicRouteTable

  InternetRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref RouteTable
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref InternetGateway

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref RouteTable

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref RouteTable

  NatGateway1EIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  NatGateway2EIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  NatGateway1:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGateway1EIP.AllocationId
      SubnetId: !Ref PublicSubnet1

  NatGateway2:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGateway2EIP.AllocationId
      SubnetId: !Ref PublicSubnet2

  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for the web servers
      VpcId: !Ref MyVPC
      SecurityGroupIngress:
        - CidrIp: "0.0.0.0/0" 
          IpProtocol: "tcp"
          FromPort: 80
          ToPort: 80
        - CidrIp: "0.0.0.0/0"
          IpProtocol: "tcp"
          FromPort: 22
          ToPort: 22
      Tags:
        - Key: Name
          Value: WebServerSecurityGroup

  WebServerInstance1:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      SecurityGroupIds:
        - !Ref WebServerSecurityGroup
      SubnetId: !Ref PublicSubnet1
      ImageId: "ami-02a548e73be1904e2" #win 2019
      UserData: # install IIS
        Fn::Base64: !Sub |
          <powershell>
          Install-WindowsFeature -Name Web-Server 
          Set-Content -Path 'C:\inetpub\wwwroot\index.html' -Value '<html><body><h1>Hello, Test VM1! I love Govtech</h1></body></html>'
          </powershell>
      Tags:
        - Key: Name
          Value: WebServerInstance1

  WebServerInstance2:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      SecurityGroupIds:
        - !Ref WebServerSecurityGroup
      SubnetId: !Ref PublicSubnet2
      ImageId: "ami-02a548e73be1904e2" #win 2019 
      UserData: # install IIS
        Fn::Base64: !Sub |
          <powershell>
          Install-WindowsFeature -Name Web-Server 
          Set-Content -Path 'C:\inetpub\wwwroot\index.html' -Value '<html><body><h1>Hello, Test VM2! I love Govtech</h1></body></html>' 
          </powershell>
      Tags:
        - Key: Name
          Value: WebServerInstance2

  ELBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: "ELBTraffic"
      GroupDescription: "Enable HTTP access on the inbound port for ELB"
      VpcId: !Ref MyVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: ELBSecurityGroup


  ELBLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties: 
      Name: "my-alb"
      Subnets:
        - Ref: PublicSubnet1
        - Ref: PublicSubnet2
      SecurityGroups:
        - !Ref ELBSecurityGroup
      Scheme: internet-facing
      LoadBalancerAttributes:
        - Key: idle_timeout.timeout_seconds
          Value: "60"
      Tags:
        - Key: Name
          Value: "my-alb"

  TargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
     HealthCheckIntervalSeconds: 6
     HealthCheckTimeoutSeconds: 5
     HealthyThresholdCount: 2
     Port: 80
     Protocol: HTTP
     UnhealthyThresholdCount: 2
     VpcId: !Ref MyVPC
     TargetType: instance
     Targets: 
       - Id: !Ref WebServerInstance1
         Port: 80
       - Id: !Ref WebServerInstance2
         Port: 80

  LoadBalancerListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref TargetGroup
      LoadBalancerArn: !Ref ELBLoadBalancer
      Port: 80
      Protocol: HTTP

  WebServerInstance1Backup:
    Type: AWS::EC2::Volume
    Properties:
      AvailabilityZone: !Select [0, !GetAZs '']
      Size: 10 
      Tags:
        - Key: Name
          Value: WebServerInstance1Backup

  WebServerInstance2Backup:
    Type: AWS::EC2::Volume
    Properties:
      AvailabilityZone: !Select [1, !GetAZs '']
      Size: 10  
      Tags:
        - Key: Name
          Value: WebServerInstance2Backup

  WebServerInstance1Snapshot:
    Type: AWS::EC2::VolumeAttachment
    Properties:
      InstanceId: !Ref WebServerInstance1
      VolumeId: !Ref WebServerInstance1Backup
      Device: /dev/sdf
    DependsOn: WebServerInstance1

  WebServerInstance2Snapshot:
    Type: AWS::EC2::VolumeAttachment
    Properties:
      InstanceId: !Ref WebServerInstance2
      VolumeId: !Ref WebServerInstance2Backup
      Device: /dev/sdf
    DependsOn: WebServerInstance2

Outputs:
  VpcId:
    Description: VPC Id
    Value: !Ref MyVPC

  LoadBalancerDNSName:
    Description: DNS name of the Load Balancer
    Value: !GetAtt ELBLoadBalancer.DNSName

  WebServerInstance1PublicIP:
    Description: Public IP address of WebServerInstance1
    Value: !GetAtt WebServerInstance1.PublicIp

  WebServerInstance2PublicIP:
    Description: Public IP address of WebServerInstance2
    Value: !GetAtt WebServerInstance2.PublicIp
